// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple should warn when value is NOT an array 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Trying to set an object as value for <Select multiple /> but it should be an array",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": null,
    },
  ],
}
`;

exports[`single should warn when value is an array 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Trying to set an array as value for <Select /> but it should be an object. Set the 'multiple' prop if it can have multiple values",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": null,
    },
  ],
}
`;
